--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,37 @@
-<html><p>Hello World</p></html>
+<!DOCTYPE html>
+<html><head><title>1913 Albany Area Map</title> 
+ <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
+<META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:image"  content="https://drive.google.com/file/d/0B_5HquxejbSaYzBSRjNUNXpqSFU/view?usp=sharing"/>
+ <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
+    <meta property="fb:app_id" content="279832412410095" />  
+  <meta property="og:title"  content="1913 Albany Area Map" /> 
+ <style>html, body {margin:0;padding:0;height:100%;-ms-content-zooming:none;}label {margin:0;padding:0;height:100%;display:block;overflow:auto;-ms-content-zooming:zoom;-ms-content-zoom-limit-max:500%;-ms-content-zoom-chaining:none;}img {display:block;max-width:100%;max-height:100%;}input {display:none;}input:checked + label > img {max-width:none;max-height:none;}input:checked + label {-ms-content-zoom-limit-min:20%;}</style><style media="(max-width: 2981px), (max-height: 3607px)">img {cursor:zoom-in;}input:checked + label > img {cursor:zoom-out;}
+ </style><style>
+ h2{
+  float: left;
+ }</style>
+</head><body style="background-color:black;"><h2><input id="zoom" type="checkbox"><label id="imgContainer" for="zoom"><img src="https://www.lib.utexas.edu/maps/topo/oregon/txu-pclmaps-topo-or-albany-1913.jpg"></label></h2><table style="width:100%"><tr><td><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></td><td><div class="fb-comments" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="500" data-colorscheme="dark" data-numposts="3"></div></td></tr></table><div class="fb-like" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="large" data-show-faces="true" data-share="true"></div><div class="fb-save" data-uri="https://albanyoregon.github.io/history/1913Map.html" data-size="large"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '279832412410095',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();   
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script></body></html>
+
+
