--- a/1852Map.html
+++ b/1852Map.html
@@ -8,14 +8,57 @@
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="526591941011579" />  
   <meta property="og:title"  content="1852 Albany Area Map" /> 
- <style>html, body {margin:0;padding:0;height:100%;-ms-content-zooming:none;}label {margin:0;padding:0;height:100%;display:block;overflow:auto;-ms-content-zooming:zoom;-ms-content-zoom-limit-max:500%;-ms-content-zoom-chaining:none;}img {display:block;max-width:100%;max-height:100%;}input {display:none;}input:checked + label > img {max-width:none;max-height:none;}input:checked + label {-ms-content-zoom-limit-min:20%;}</style><style media="(max-width: 7813px), (max-height: 4681px)">img {cursor:zoom-in;}input:checked + label > img {cursor:zoom-out;}
- </style><style type="text/css">p {margin:10;padding:10;background-color:White;background-repeat:no-repeat;background-attachment:fixed;font-family:Arial;font-size:8pt;color:Black;}
-
-</style><style>
- h2{
-  float: left;
- }</style>
-</head><body style="background-color:white;"><h2><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="640" height="480"></iframe><p>General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. Survey plats are part of the official record of a cadastral survey. Surveying is the art and science of measuring the land to locate the limits of an owner's interest thereon. A cadastral survey is a survey which creates, marks, defines, retraces or re-establishes the boundaries and subdivisions of Federal Lands of the United States. The survey plat is the graphic drawing of the boundaries involved with a particular survey project, and contains the official acreage to be used in the legal description. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="large"></div><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></h2>
+ <style type="text/css">
+  p{
+   margin:10;
+   padding:10;
+   background-color:White;
+   background-repeat:no-repeat;
+   background-attachment:fixed;
+   font-family:Arial;
+   font-size:8pt;
+   color:Black;
+  }
+ a:link {
+    color:#ffffff;
+    background-color:#4267b2;
+    cursor: pointer;
+    border: 1px solid #4080ff;
+    border-radius: 4px;
+    font-size: 13px;
+    height: 28px;
+    padding: 0 4px 0 6px;
+    text-decoration:none; 
+}
+a:visited {
+    color:#ffffff;
+    background-color:#4080ff;
+    cursor: pointer;
+    border: 1px solid #4080ff;
+    border-radius: 4px;
+    font-size: 13px;
+    height: 28px;
+    padding: 0 4px 0 6px;
+    text-decoration:none;
+}
+a:hover {
+    color:Red;
+    background-color:White;
+    text-decoration:none;
+}
+a:active {
+       color:#ffffff;
+    background-color:#4080ff;
+    cursor: pointer;
+    border: 1px solid #4080ff;
+    border-radius: 4px;
+    font-size: 13px;
+    height: 28px;
+    padding: 0 4px 0 6px;
+    text-decoration:none;
+}
+</style>
+</head><body style="background-color:white;"><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="100%" height="480"></iframe><p>General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. Survey plats are part of the official record of a cadastral survey. Surveying is the art and science of measuring the land to locate the limits of an owner's interest thereon. A cadastral survey is a survey which creates, marks, defines, retraces or re-establishes the boundaries and subdivisions of Federal Lands of the United States. The survey plat is the graphic drawing of the boundaries involved with a particular survey project, and contains the official acreage to be used in the legal description. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p><table width="100%"><tr><td><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="large"></div></td><td><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></td><td>More Maps...<br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a></td></tr></table>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
