--- a/1852Map.html
+++ b/1852Map.html
@@ -16,7 +16,7 @@
    background-repeat:no-repeat;
    background-attachment:fixed;
    font-family:Arial;
-   font-size:8pt;
+   font-size:8vw;
    color:Black;
   }
  a:link {
@@ -25,7 +25,7 @@
     cursor: pointer;
     border: 1px solid #4080ff;
     border-radius: 4px;
-    font-size: 13px;
+    font-size: 13vw;
     height: 28px;
     padding: 0 4px 0 6px;
     text-decoration:none; 
@@ -37,7 +37,7 @@ a:visited {
     border: 1px solid #4080ff;
     border-radius: 4px;
     font-size: 13px;
-    height: 28px;
+    height: 28vw;
     padding: 0 4px 0 6px;
     text-decoration:none;
 }
@@ -52,7 +52,7 @@ a:active {
     cursor: pointer;
     border: 1px solid #4080ff;
     border-radius: 4px;
-    font-size: 13px;
+    font-size: 13vw;
     height: 28px;
     padding: 0 4px 0 6px;
     text-decoration:none;
