--- a/1852Map.html
+++ b/1852Map.html
@@ -14,25 +14,25 @@
 }
 .left {
   background-color:White;
-  padding:20px;
+  padding:10;
   float:left;
   width:30%;/*The width is 20%, by default*/
 }
 .main {
   background-color:White;
-  padding:20px;
+  padding:10;
   float:left;
   width:20%;/*The width is 60%, by default*/
 }
 .right {
   background-color:White;
-  padding:20px;
+  padding:10;
   float:left;
   width:50%;/*The width is 20%, by default*/
 }
 
 /*Use a media query to add a break point at 800px:*/
-@media (max-width:480px) {
+@media (max-width:800px) {
   .left, .right, .main {
     width:100%;/*The width is 100%, when the viewport is 800px or smaller*/
   }
@@ -86,7 +86,8 @@ a:active {
     text-decoration:none;
 }
 </style>
-</head><body style="background-color:white;"><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="100%" height="480"></iframe><p>General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. Survey plats are part of the official record of a cadastral survey. Surveying is the art and science of measuring the land to locate the limits of an owner's interest thereon. A cadastral survey is a survey which creates, marks, defines, retraces or re-establishes the boundaries and subdivisions of Federal Lands of the United States. The survey plat is the graphic drawing of the boundaries involved with a particular survey project, and contains the official acreage to be used in the legal description. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="large"></div></div><div class="main">More Maps...<br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></div>
+</head><body style="background-color:white;"><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="100%" height="480"></iframe><p>This is a hybrid map consisting of two individual 1852 General Land Office maps that have been electronicly stitched together due to Albany being split right down the middle, North to South, by the boundry line seperating Range 4 West (R.4 W.) and Range 3 West (R.3 W.).<br>
+General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. Survey plats are part of the official record of a cadastral survey. Surveying is the art and science of measuring the land to locate the limits of an owner's interest thereon. A cadastral survey is a survey which creates, marks, defines, retraces or re-establishes the boundaries and subdivisions of Federal Lands of the United States. The survey plat is the graphic drawing of the boundaries involved with a particular survey project, and contains the official acreage to be used in the legal description. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="large"></div></div><div class="main">More Maps...<br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
