--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><title>1913 Albany Area Map</title> 
+<html><head><title>Albany Oregon Area History and Information</title> 
  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
 <META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,12 +8,28 @@
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="279832412410095" />  
   <meta property="og:title"  content="1913 Albany Area Map" /> 
- <style>html, body {margin:0;padding:0;height:100%;-ms-content-zooming:none;}label {margin:0;padding:0;height:100%;display:block;overflow:auto;-ms-content-zooming:zoom;-ms-content-zoom-limit-max:500%;-ms-content-zoom-chaining:none;}img {display:block;max-width:100%;max-height:100%;}input {display:none;}input:checked + label > img {max-width:none;max-height:none;}input:checked + label {-ms-content-zoom-limit-min:20%;}</style><style media="(max-width: 2981px), (max-height: 3607px)">img {cursor:zoom-in;}input:checked + label > img {cursor:zoom-out;}
- </style><style>
+ <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#00FF00">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#00FF00">
+ <style>
  h2{
   float: left;
  }</style>
-</head><body style="background-color:black;"><h2><input id="zoom" type="checkbox"><label id="imgContainer" for="zoom"><img src="https://www.lib.utexas.edu/maps/topo/oregon/txu-pclmaps-topo-or-albany-1913.jpg"></label></h2><table style="width:100%"><tr><td><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></td><td><div class="fb-comments" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="500" data-colorscheme="dark" data-numposts="3"></div></td></tr></table><div class="fb-like" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="large" data-show-faces="true" data-share="true"></div><div class="fb-save" data-uri="https://albanyoregon.github.io/history/1913Map.html" data-size="large"></div>
+</head><body style="background-color:black;"><iframe src="https://www.crimereports.com/home/?is_widget=true#!/dashboard?incident_types=Assault%252CAssault%2520with%2520Deadly%2520Weapon%252CBreaking%2520%2526%2520Entering%252CDisorder%252CDrugs%252CHomicide%252CKidnapping%252CLiquor%252COther%2520Sexual%2520Offense%252CProperty%2520Crime%252CProperty%2520Crime%2520Commercial%252CProperty%2520Crime%2520Residential%252CQuality%2520of%2520Life%252CRobbery%252CSexual%2520Assault%252CSexual%2520Offense%252CTheft%252CTheft%2520from%2520Vehicle%252CTheft%2520of%2520Vehicle&start_date=2017-10-07&end_date=2017-10-21&days=sunday%252Cmonday%252Ctuesday%252Cwednesday%252Cthursday%252Cfriday%252Csaturday&start_time=0&end_time=23&include_sex_offenders=false&lat=44.628473695255835&lng=-123.08687210083008&zoom=13&current_tab=satellite&shapeIds=&searchText=97321%252C%2520Albany%252C%2520Oregon%252C%2520United%2520States&date_type=relative" width="100%" height="538" style="border: 5px solid #00FF00;"></iframe><table style="width:100%"><tr><td><div class="fb-page" data-href="https://www.facebook.com/AlbanyOrDie" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyOrDie" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyOrDie">Albany ᴴᶤᶳᵗᵒʳᶤᶲᵘᵉ</a></blockquote></div></td><td><div class="fb-comments" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="500" data-colorscheme="dark" data-numposts="3"></div></td></tr></table><div class="fb-like" data-href="https://albanyoregon.github.io/history/1913Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="large" data-show-faces="true" data-share="true"></div><div class="fb-save" data-uri="https://albanyoregon.github.io/history/1913Map.html" data-size="large"></div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
