--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -24,94 +24,8 @@
 <meta name="msapplication-TileColor" content="#00FF00">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
- <style type="text/css">
-  * {
-  box-sizing: border-box;
-}
-.left {
-  background-color:White;
-  padding:10;
-  float:left;
-  width:30%;/*The width is 20%, by default*/
-}
-.main {
-  background-color:White;
-  padding:10;
-  float:left;
-  width:20%;/*The width is 60%, by default*/
-}
-.right {
-  background-color:White;
-  padding:10;
-  float:left;
-  width:50%;/*The width is 20%, by default*/
-}
-/*Use a media query to add a break point at 800px:*/
-@media (max-width:800px) {
-  .left, .right, .main {
-    width:100%;/*The width is 100%, when the viewport is 800px or smaller*/
-  }
-}
-    h1{
-   margin:10;
-   padding:10;
-   background-color:White;
-   background-repeat:no-repeat;
-   background-attachment:fixed;
-   font-family:Arial;
-   font-size:19px;
-   color:Black;
-  }
-  p{
-   margin:10;
-   padding:10;
-   background-color:White;
-   background-repeat:no-repeat;
-   background-attachment:fixed;
-   font-family:Arial;
-   font-size:14px;
-   color:Black;
-  }
- a:link {
-    color:#ffffff;
-    background-color:#4267b2;
-    cursor: pointer;
-    border: 1px solid #4080ff;
-    border-radius: 4px;
-    font-size: 19px;
-    height: 28px;
-    padding: 0 4px 0 6px;
-    text-decoration:none; 
-}
-a:visited {
-    color:#ffffff;
-    background-color:#4080ff;
-    cursor: pointer;
-    border: 1px solid #4080ff;
-    border-radius: 4px;
-    font-size: 19px;
-    height: 28px;
-    padding: 0 4px 0 6px;
-    text-decoration:none;
-}
-a:hover {
-    color:Red;
-    background-color:White;
-    text-decoration:none;
-}
-a:active {
-       color:#ffffff;
-    background-color:#4080ff;
-    cursor: pointer;
-    border: 1px solid #4080ff;
-    border-radius: 4px;
-    font-size: 19px;
-    height: 28px;
-    padding: 0 4px 0 6px;
-    text-decoration:none;
-}
-</style>
-  </head><body style="background-color:Bright Green;"><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="560" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="large"></div><br><br></div><div class="main">More Maps...<br><a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a><br><br><a href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017 Albany Area</a><br><br></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+<link rel="stylesheet" type="text/css" href="AlbanyORHistoryWebSitesStyleSheet.css">
+  </head><body><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="560" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="large"></div><br><br></div><div class="main">More Maps...<br><a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a><br><br><a href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017 Albany Area</a><br><br></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
