--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html><head><title>Albany</title> 
  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
 <META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:image"  content="xxx"/>
- <meta property="og:description"  content="xxx"/>
+    <meta property="og:image"  content=""/>
  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
-    <meta property="fb:app_id" content="117812298943734" />  
-  <meta property="og:title"  content="1878 Albany Area Hybrid Atlas Map" /><link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <meta property="fb:app_id" content="" />  
+  <meta property="og:title"  content="Albany" /> 
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
@@ -25,7 +26,9 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
 <link rel="stylesheet" type="text/css" href="AlbanyORHistoryWebSitesStyleSheet.css">
-  </head><body><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="510" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="large" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="large"></div><br><br></div><div class="main">More Maps...<br><a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878 Albany Area</a><br><br><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890 Albany</a><br><br><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913 Albany Area</a><br><br><a style="color:white; background-color:red; cursor:text;"  href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017 Albany Area</a><br><br></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+</head><body><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="510" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="light" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+  <div id="text">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a style="color:white; background-color:red; cursor:text;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017</a></div>
+
 <script>
   window.fbAsyncInit = function() {
     FB.init({
