--- a/1852Map.html
+++ b/1852Map.html
@@ -3,11 +3,13 @@
  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
 <META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:image"  content="https://docs.google.com/uc?export=&id=0B_5HquxejbSaNmg4clZBVE1Kd0k"/>
+    <meta property="og:image"  content="https://docs.google.com/uc?export=download&id=0B88WsL3jRhMaU0l0ek9aZXVzN3M"/>
  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="526591941011579" />  
-  <meta property="og:title"  content="1852 Albany Area Map" /> 
+  <meta property="og:description" content="" /> 
+ <meta property="og:type"  content="website" />  
+ <meta property="og:title"  content="1852 Albany Area Map" /> 
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
