--- a/1852Map.html
+++ b/1852Map.html
@@ -7,7 +7,7 @@
  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="526591941011579" />  
-  <meta property="og:description" content="" /> 
+  <meta property="og:description" content="👍" /> 
  <meta property="og:type"  content="website" />  
  <meta property="og:title"  content="1852 Albany Area Map" /> 
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
