--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
 <META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:image"  content="https://docs.google.com/uc?export=&id=0B_5HquxejbSaYzBSRjNUNXpqSFU"/>
+    <meta property="og:image"  content="https://i.imgur.com/7RwkOGD.gif?1"/>
  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="124795608278612" />  
