--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     
     <div class="container">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5"><div style="color:white; text-shadow: 2px 2px 4px #00FF00;">Historic Maps of the City of Albany and the County of Linn in the great State of Oregon</h2>
+        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5"><div style="color:white; text-shadow: 2px 2px 4px #00FF00;">Historic Maps of the City of Albany and Linn County</h2>
         
         <div class="media-container-row pt-5 ">
             <div class="card p-3 col-12 col-md-6 col-lg-3">
